Quality of life changes
Now there are 3 models, source, company and options

Source determines where we get the data (only yahoo finance is available right now). Company determines the company (duh) and options determines the training period and prediction period.

You go to prediction/pickSource then it'll let you pick a source (just yahoo). Then you pick a company, then options, then it trains the model and predicts. May return error if ur on mac.

--- a/prediction/templates/prediction/companyPicker.HTML
+++ b/prediction/templates/prediction/companyPicker.HTML
@@ -1,7 +1,7 @@
 {% if companyList %}
 <ul>
     {% for company in companyList %}
-        <li><a href="{% url 'prediction:pickOptions' company.id %}">{{company.companyName}}</a></li>
+        <li><a href="{% url 'prediction:pickOptions' sourceID company.id %}">{{company.companyName}}</a></li>
     {% endfor %}
 </ul>
 {% else %}
